Refactor CSS styles and update background images

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ footer {
 .home-page {
     background: 
         /* linear-gradient(rgba(253, 253, 253, 0.85), rgba(164, 189, 115, 0.85)), */
-        url("https://img.freepik.com/premium-photo/white-yellow-marble-with-gold-white-colors_662214-27496.jpg");
+        url("https://png.pngtree.com/thumb_back/fh260/background/20220215/pngtree-home-frosted-light-yellow-textured-marble-background-image_925969.jpg");
 
     background-size: cover;
     background-position: center;
@@ -391,4 +391,5 @@ footer {
         width: 100%;
     }
 }
+
 
